--- a/style.css
+++ b/style.css
@@ -58,6 +58,8 @@ body{
     width: 100%;
     border: 1px solid black;
     overflow: hidden;
+    display: flex;
+    margin-bottom: 3rem;
 }
 #center{
     background-color: lightgrey;
@@ -67,6 +69,7 @@ body{
     padding: 1%;
     margin: auto;
     width: 60%;
+    flex: 2;
 }
 #center p{
     text-align: left;
@@ -75,19 +78,29 @@ body{
 #right{
     background-color:darkgrey;
     float: right;
+    display: flex;
     overflow: auto;
     margin: auto;
     padding: 1%;
     width: 35%;
+    flex: 1;
+    /*height: 15%; */
 }
 #right p{
     text-align: left;
     font-size: medium;
 }
 
-
+.border{
+  border: 2px solid black;
+  border-radius: 10px;
+  padding: .5rem;
+}
 .footer {
     background-color: #F1F1F1;
-    text-align: center;
+    width: 70%;
     padding: 10px;
   }
+.footer p{
+  text-align: center;
+}
