--- a/style.css
+++ b/style.css
@@ -1,27 +1,41 @@
 header {
-    background-color: rgba(25, 124, 211, 0.219);
+    /* background-color: rgba(25, 124, 211, 0.219); */
+    background-color: lightblue;
 }
 body{
     background-color:None;
+}
+
+h1{
+    margin: 0;
 }
 /*All Code Below is for stlying the top bar below title */
 
 .topbar {
     overflow: hidden;
-    background-color: #ccc;      /* #e9e9e9 */
+    /* background-color: #ccc;      #e9e9e9 */
+    background-color: white;
+    padding: 8px;
 } 
-.topbar a {
+.left_nav{
     float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
+}
+.topbar a{
     text-decoration: none;
     font-size: 17px;
+    color: black;
+    padding: 14px 16px;
+    text-align: center;
+    display: block;
+    border: 2px solid black;
+    border-radius: 2rem;
+    background-color: lightyellow;
+    margin-right: .5rem;
 }
   /* Change the color of links on hover */
   .topbar a:hover {
-    background-color: #ddd;
+    /* background-color: #ddd; */
+    background-color: lightgoldenrodyellow;
     color: black;
   }
   /* Style the "active" element to highlight the current page */
@@ -31,17 +45,51 @@ body{
 }
   /* Style the search box inside the navigation bar */
 .topbar input[type=text] {
-    float: right;
-    padding: 6px;
-    border: none;
-    margin-top: 8px;
-    margin-right: 4%;
+    padding: 14px;
     font-size: 17px;
+    border: 2px solid black;
+    border-radius: 2rem;
+    outline:none;
 }
+input[type=text]:active{
+    background-color: lightskyblue;
+    border-radius: 2rem;
+}
+input[type=button]{
+    font-size: 17px;
+    padding: 14px;   
+    margin-right:1rem;
+    border-radius: 2rem;
+    outline:none;
+}
+input[type=button]:hover{
+    background-color: lightpink;
+}
+form{
+    display:inline;
+    margin: 0;
+}
+.nav_right{
+    float:right;
+}
+.right_nav{
+    float: right;
+}
+#signup{
+    background-color: lightsalmon;
+    margin-right: 0;
+}
+#signup:hover{
+    background-color: salmon;
+}
+#login:hover{
+    background-color:lightsalmon
+}
+
   
   /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
-    .topbar a, .topbar input[type=text] {
+    .left_nav, .topbar input[type=text] {
       float: none;
       display: block;
       text-align: left;
@@ -62,7 +110,7 @@ body{
     margin-bottom: 3rem;
 }
 #center{
-    background-color: lightgrey;
+    background-color:lightgray;
     display: flex;
     float: left;
     overflow: auto;
@@ -103,4 +151,8 @@ body{
   }
 .footer p{
   text-align: center;
+}
+#banner{
+    width: 100%;
+    height: 50%;
 }
