--- a/style.css
+++ b/style.css
@@ -1,41 +1,37 @@
 header {
-    /* background-color: rgba(25, 124, 211, 0.219); */
-    background-color: lightblue;
+    background-color: rgba(25, 124, 211, 0.219);
 }
 body{
     background-color:None;
 }
 
-h1{
-    margin: 0;
-}
 /*All Code Below is for stlying the top bar below title */
 
 .topbar {
     overflow: hidden;
-    /* background-color: #ccc;      #e9e9e9 */
-    background-color: white;
-    padding: 8px;
+    background-color: #ccc;      /* #e9e9e9 */
 } 
-.left_nav{
-    float: left;
+.topbar input {
+  height: 5%;
+  float: right;
+  display: block;
+  margin-right: 2px;
+  margin-top: 8px;
+  margin-bottom: 15px
 }
-.topbar a{
+
+.topbar a {
+    float: left;
+    display: block;
+    color: black;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
-    color: black;
-    padding: 14px 16px;
-    text-align: center;
-    display: block;
-    border: 2px solid black;
-    border-radius: 2rem;
-    background-color: lightyellow;
-    margin-right: .5rem;
 }
   /* Change the color of links on hover */
   .topbar a:hover {
-    /* background-color: #ddd; */
-    background-color: lightgoldenrodyellow;
+    background-color: #ddd;
     color: black;
   }
   /* Style the "active" element to highlight the current page */
@@ -45,51 +41,17 @@ h1{
 }
   /* Style the search box inside the navigation bar */
 .topbar input[type=text] {
-    padding: 14px;
-    font-size: 17px;
-    border: 2px solid black;
-    border-radius: 2rem;
-    outline:none;
-}
-input[type=text]:active{
-    background-color: lightskyblue;
-    border-radius: 2rem;
-}
-input[type=button]{
-    font-size: 17px;
-    padding: 14px;   
-    margin-right:1rem;
-    border-radius: 2rem;
-    outline:none;
-}
-input[type=button]:hover{
-    background-color: lightpink;
-}
-form{
-    display:inline;
-    margin: 0;
-}
-.nav_right{
-    float:right;
-}
-.right_nav{
     float: right;
+    padding: 5px;
+    border: none;
+    margin-top: 8px;
+    margin-right: 3%;
+    font-size: 17px;
 }
-#signup{
-    background-color: lightsalmon;
-    margin-right: 0;
-}
-#signup:hover{
-    background-color: salmon;
-}
-#login:hover{
-    background-color:lightsalmon
-}
-
   
   /* When the screen is less than 600px wide, stack the links and the search field vertically instead of horizontally */
 @media screen and (max-width: 600px) {
-    .left_nav, .topbar input[type=text] {
+    .topbar a, .topbar input[type=text] {
       float: none;
       display: block;
       text-align: left;
@@ -110,7 +72,7 @@ form{
     margin-bottom: 3rem;
 }
 #center{
-    background-color:lightgray;
+    background-color: lightgrey;
     display: flex;
     float: left;
     overflow: auto;
@@ -152,7 +114,7 @@ form{
 .footer p{
   text-align: center;
 }
-#banner{
-    width: 100%;
-    height: 50%;
+.post{
+  float: center;
+  flex: 1;
 }
