--- a/style.css
+++ b/style.css
@@ -100,6 +100,11 @@ body{
     text-align: left;
     font-size: medium;
 }
+ul{
+  list-style: None;
+  text-align: left;
+  margin: 0;
+}
 
 .border{
   border: 2px solid black;
@@ -109,6 +114,7 @@ body{
 .footer {
     background-color: #F1F1F1;
     width: 70%;
+    text-align: center;
     padding: 10px;
   }
 .footer p{
