--- a/login_style.css
+++ b/login_style.css
@@ -1,8 +1,9 @@
 body{
     background-color:#ccc;
+    float:center;
 }
 main{
-    padding:20rem;
+    padding:2rem;
     text-align: center;
     border: 2px solid black;
     margin: 5rem;
@@ -19,6 +20,17 @@ main{
     float: center;
 }
 
+.info input[type=password]{
+    width: 40%;
+    float:right;
+    margin-right:20%;
+}
+input[type=text], #genoptions{
+    width: 40%;
+    float:right;
+    margin-right: 20%;
+    
+}
 #input{
     align-items: center;
 
@@ -30,9 +42,29 @@ ul{
     padding: 0
 }
 .info{
-    margin-left:35%;
+    margin-left:auto;
+    margin-right: auto;
+    text-align:center;
+}
+
+input[type=submit]{
+    margin-right: 1rem;
+}
+.buttons{
+    padding: .5rem;
+}
+.gender{
+    display:inline;
+}
+
+.text_info{
+    width:70%;
+    margin-left:auto;
+    margin-right: auto;
     text-align:left;
 }
-#email{
-    width: 195;
+#input, #login_info{
+    width: 50%;
+    margin-left:auto;
+    margin-right:auto;
 }
