--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 header {
     /* background-color: rgba(25, 124, 211, 0.219); */
     background-color: lightblue;
+    opacity: .9;
+    
 }
 body{
     background-color:None;
@@ -104,16 +106,20 @@ form{
 
 #wrapper{
     width: 100%;
+    background-image: url("music.jpg") ;
     border: 1px solid black;
     overflow: hidden;
     display: flex;
     margin-bottom: 3rem;
 }
+
 #center{
-    background-color:lightgray;
-    display: flex;
+    background-color:rgb(216, 179, 178);
     float: left;
+    /*
+    display: flex;
     overflow: auto;
+    */
     padding: 1%;
     margin: auto;
     width: 60%;
@@ -132,7 +138,6 @@ form{
     padding: 1%;
     width: 35%;
     flex: 1;
-    /*height: 15%; */
 }
 #right p{
     text-align: left;
@@ -145,14 +150,27 @@ form{
   padding: .5rem;
 }
 .footer {
-    background-color: #F1F1F1;
-    width: 70%;
+    background-color: #a59090;
+    width: 50%;
     padding: 10px;
   }
-.footer p{
-  text-align: center;
+#foot{
+    width: 30%;
+    text-align: center;
+    border: 2px solid black;
+    margin-left: 30%;
+    margin-right: 30%;
+    border-radius: 10px;
+    padding: .5rem;
 }
 #banner{
     width: 100%;
     height: 50%;
+}
+#first{
+    margin: 0 auto;
+    padding: 1%;
+    margin-top: 1%;
+    width: 75%;
+
 }
